# Chestny-ZNAK-testing

./: .gitignore  .template.env.docker  Dockerfile  README.md  config.example.toml  docker-compose.yaml  pyproject.toml
app/: __init__.py  alembic.ini  main.py
app/alembic/: env.py
app/alembic/versions/: 2025_03_17_0514-b69748998043_create_data_table.py  2025_03_17_0515-4309ed459816_create_documents_table.py
app/commands/: data_filter.py
app/core/: settings.py
app/core/database/sqlalchemy/: __init__.py  engine.py  session_factory.py
app/core/database/sqlalchemy/models/: base.py  data.py  document.py
app/core/logger/: init_logger.py
app/core/repositories/: data.py  documents.py  load_repository.py
app/core/use_cases/: load_data.py  proccess_document.py
app/ioc/: init_container.py  sqlalchemy_providers.py
app/utils/: pluralize.py
